--- a/config/redis-config.json
+++ b/config/redis-config.json
@@ -1,5 +1,5 @@
 {
-  "REDIS_HOST": "redis",
+  "REDIS_HOST": "172.17.0.1",
   "REDIS_PORT": 6379,
-  "REDIS_PASSWORD": "password"
+  "REDIS_PASSWORD": null
 }
